--- a/modal.html
+++ b/modal.html
@@ -11,23 +11,23 @@
 <body>
     <div class="cards">
         <div class="card" data-description="Matt is transitting Mongolia">
-            <img src="matt_train.jpg" alt="Matt at work">
-            <h2><img class="thumbnail" src="M.jpg" alt="M" />Train Matt</h2>
+            <img src="img/matt_train.jpg" alt="Matt at work">
+            <h2><img class="thumbnail" src="img/M.jpg" alt="M" />Train Matt</h2>
             <button>Learn more →</button>
         </div>
         <div class="card" data-description="Matt is scaling the Great Wall">
-            <img src="matt_wall.jpg" alt="Matt on Great Wall">
-            <h2><img class="thumbnail" src="A.jpg" alt="A" />Great Wall Matt</h2>
+            <img src="img/matt_wall.jpg" alt="Matt on Great Wall">
+            <h2><img class="thumbnail" src="img/A.jpg" alt="A" />Great Wall Matt</h2>
             <button>Learn more →</button>
         </div>
         <div class="card" data-description="Matt is on top of the World!">
-            <img src="matt_mountain.jpg" alt="Matt on top of Kili">
-            <h2><img class="thumbnail" src="TT.jpg" alt="T" />Kili Matt</h2>
+            <img src="img/matt_mountain.jpg" alt="Matt on top of Kili">
+            <h2><img class="thumbnail" src="img/TT.jpg" alt="T" />Kili Matt</h2>
             <button>Learn more →</button>
         </div>
         <div class="card" data-description="Matt is a Mongolian Warrior">
-            <img src="matt_warrior.jpg" alt="Matt is a warrior">
-            <h2><img class="thumbnail" src="T2.jpg" alt="T" />Warrior Matt</h2>
+            <img src="img/matt_warrior.jpg" alt="Matt is a warrior">
+            <h2><img class="thumbnail" src="img/T2.jpg" alt="T" />Warrior Matt</h2>
             <button>Learn more →</button>
         </div>
     </div>
@@ -43,7 +43,7 @@
 
     <style>
         body {
-            background: url('footy.jpg');
+            background: url('img/footy.jpg');
             background-size: cover;
         }
 
