--- a/modal.html
+++ b/modal.html
@@ -6,31 +6,153 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matt Modal</title>
     <link rel="stylesheet" href="./base.css">
+    <link rel="stylesheet" href="./tabs-style.css">
 </head>
 
 <body>
-    <div class="cards">
-        <div class="card" data-description="Matt is transitting Mongolia">
-            <img src="img/matt_train.jpg" alt="Matt at work">
-            <h2><img class="thumbnail" src="img/M.jpg" alt="M" />Train Matt</h2>
-            <button>Learn more →</button>
+
+    <div class="tabs">
+        <div role="tablist" aria-label="Programming Languages">
+            <button role="tab" aria-selected="true" id="china">
+                China
+            </button>
+            <button role="tab" aria-selected="false" id="mongolia">Mongolia
+            </button>
+            <button role="tab" aria-selected="false" id="tanzania">
+                Tanzania
+            </button>
+            <button role="tab" aria-selected="false" id="termsAndConds">
+                Terms
+            </button>
         </div>
-        <div class="card" data-description="Matt is scaling the Great Wall">
-            <img src="img/matt_wall.jpg" alt="Matt on Great Wall">
-            <h2><img class="thumbnail" src="img/A.jpg" alt="A" />Great Wall Matt</h2>
-            <button>Learn more →</button>
+        <div role="tabpanel" aria-labelledby="china">
+            <div class="cards">
+                <div class="card" data-description="Matt is scaling the Great Wall">
+                    <img src="img/matt_wall.jpg" alt="Matt on Great Wall">
+                    <h2><img class="thumbnail" src="img/A.jpg" alt="A" />Great Wall Matt</h2>
+                    <button>Learn more →</button>
+                </div>
+            </div>
         </div>
-        <div class="card" data-description="Matt is on top of the World!">
-            <img src="img/matt_mountain.jpg" alt="Matt on top of Kili">
-            <h2><img class="thumbnail" src="img/TT.jpg" alt="T" />Kili Matt</h2>
-            <button>Learn more →</button>
+        <div role="tabpanel" aria-labelledby="mongolia" hidden>
+            <div class="cards">
+                <div class="card" data-description="Matt is transitting Mongolia">
+                    <img src="img/matt_train.jpg" alt="Matt at work">
+                    <h2><img class="thumbnail" src="img/M.jpg" alt="M" />Train Matt</h2>
+                    <button>Learn more →</button>
+                </div>
+                <div class="card" data-description="Matt is a Mongolian Warrior">
+                    <img src="img/matt_warrior.jpg" alt="Matt is a warrior">
+                    <h2><img class="thumbnail" src="img/T2.jpg" alt="T" />Warrior Matt</h2>
+                    <button>Learn more →</button>
+                </div>
+            </div>
         </div>
-        <div class="card" data-description="Matt is a Mongolian Warrior">
-            <img src="img/matt_warrior.jpg" alt="Matt is a warrior">
-            <h2><img class="thumbnail" src="img/T2.jpg" alt="T" />Warrior Matt</h2>
-            <button>Learn more →</button>
+        <div role="tabpanel" aria-labelledby="tanzania" hidden>
+            <div class="cards">
+                <div class="card" data-description="Matt is on top of the World!">
+                    <img src="img/matt_mountain.jpg" alt="Matt on top of Kili">
+                    <h2><img class="thumbnail" src="img/TT.jpg" alt="T" />Kili Matt</h2>
+                    <button>Learn more →</button>
+                </div>
+
+            </div>
+        </div>
+
+        <div role="tabpanel" aria-labelledby="termsAndConds" hidden>
+            <div class="wrapper">
+                <div class="terms-and-conditions">
+                    <h3>Terms and Conditions - scroll down to accept</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste, labore!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum assumenda, ullam, sed quo
+                        ipsam
+                        officia
+                        asperiores minima excepturi eveniet reiciendis velit debitis temporibus explicabo. Incidunt
+                        sit
+                        itaque,
+                        reprehenderit fuga voluptatem officiis corrupti ipsa eveniet architecto dolorem magni facere
+                        doloribus
+                        aut
+                        veritatis sequi quia repellendus aperiam assumenda exercitationem optio praesentium debitis.
+                        Excepturi
+                        unde
+                        minus dignissimos at totam tempora beatae cumque, voluptates adipisci repudiandae asperiores
+                        repellat
+                        delectus
+                        tempore voluptatem veritatis atque quaerat optio! Quasi, possimus molestiae hic modi quia
+                        minus eius
+                        veniam
+                        aperiam assumenda fugiat fugit optio odio quas esse quam architecto officiis sunt quis
+                        cupiditate
+                        vel
+                        voluptate
+                        consequuntur nam porro harum. Fuga distinctio voluptate provident molestias perspiciatis
+                        fugit esse
+                        corrupti
+                        adipisci quas eos dolor non cum ipsam repudiandae dolorem, quasi necessitatibus iusto unde
+                        similique
+                        repellendus praesentium tenetur? Obcaecati aliquam nostrum vero expedita fuga, quae et
+                        quaerat modi
+                        error
+                        adipisci eligendi fugit alias quia nihil laudantium quam tenetur ipsam explicabo nisi natus,
+                        rerum
+                        omnis,
+                        debitis provident! Dolorum sequi recusandae, necessitatibus eos nesciunt cupiditate
+                        accusantium
+                        illum
+                        unde
+                        minima. Labore sit quos voluptatem illum qui. Veritatis quis a mollitia asperiores
+                        repudiandae
+                        consequatur
+                        assumenda, at tempora, modi voluptate sit blanditiis hic dignissimos harum consequuntur quia
+                        ipsam,
+                        architecto
+                        nesciunt. Praesentium, mollitia? Delectus quod laudantium doloremque nihil?</p>
+                    <strong class="watch">watch for me</strong>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos ab, ea inventore commodi
+                        eligendi
+                        error
+                        repellat impedit eum quod enim sequi, distinctio, qui eaque ipsam fugit asperiores eos
+                        laboriosam
+                        ex.
+                    </p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa id debitis ex eligendi rem
+                        unde
+                        consequuntur
+                        natus omnis vel nulla sit commodi, quos distinctio doloremque doloribus veniam quis et
+                        dolore?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi laboriosam nulla est
+                        architecto
+                        eum,
+                        dolorem
+                        quam, unde quo fugit tempore ipsa qui provident, iste ratione quis dignissimos temporibus
+                        nostrum
+                        voluptatum
+                        molestias? Blanditiis repellendus sapiente inventore aliquam qui error aliquid doloremque
+                        fugit
+                        consequuntur
+                        laudantium. Sapiente doloribus ullam vel dicta doloremque iure, deleniti ipsum non. Rem
+                        repudiandae
+                        deleniti
+                        ad
+                        at laborum eaque, modi voluptas aut! Quam nihil deleniti velit excepturi, quidem, veniam aut
+                        doloremque
+                        iure
+                        reprehenderit natus vel quia iusto? Magni veritatis provident libero hic quisquam,
+                        perferendis
+                        officia
+                        quasi
+                        molestiae sit sunt fugiat, perspiciatis architecto velit unde molestias ratione totam, atque
+                        doloremque!
+                    </p>
+                    <hr>
+                </div>
+                <button class="accept" disabled>Accept</button>
+            </div>
         </div>
     </div>
+
+
 
     <div class="modal-outer">
         <div class="modal-inner">
@@ -38,62 +160,7 @@
 
     </div>
 
-    <div class="wrapper">
-        <div class="terms-and-conditions">
-            <h3>Terms and Conditions - scroll down to accept</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste, labore!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum assumenda, ullam, sed quo ipsam officia
-                asperiores minima excepturi eveniet reiciendis velit debitis temporibus explicabo. Incidunt sit itaque,
-                reprehenderit fuga voluptatem officiis corrupti ipsa eveniet architecto dolorem magni facere doloribus
-                aut
-                veritatis sequi quia repellendus aperiam assumenda exercitationem optio praesentium debitis. Excepturi
-                unde
-                minus dignissimos at totam tempora beatae cumque, voluptates adipisci repudiandae asperiores repellat
-                delectus
-                tempore voluptatem veritatis atque quaerat optio! Quasi, possimus molestiae hic modi quia minus eius
-                veniam
-                aperiam assumenda fugiat fugit optio odio quas esse quam architecto officiis sunt quis cupiditate vel
-                voluptate
-                consequuntur nam porro harum. Fuga distinctio voluptate provident molestias perspiciatis fugit esse
-                corrupti
-                adipisci quas eos dolor non cum ipsam repudiandae dolorem, quasi necessitatibus iusto unde similique
-                repellendus praesentium tenetur? Obcaecati aliquam nostrum vero expedita fuga, quae et quaerat modi
-                error
-                adipisci eligendi fugit alias quia nihil laudantium quam tenetur ipsam explicabo nisi natus, rerum
-                omnis,
-                debitis provident! Dolorum sequi recusandae, necessitatibus eos nesciunt cupiditate accusantium illum
-                unde
-                minima. Labore sit quos voluptatem illum qui. Veritatis quis a mollitia asperiores repudiandae
-                consequatur
-                assumenda, at tempora, modi voluptate sit blanditiis hic dignissimos harum consequuntur quia ipsam,
-                architecto
-                nesciunt. Praesentium, mollitia? Delectus quod laudantium doloremque nihil?</p>
-            <strong class="watch">watch for me</strong>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos ab, ea inventore commodi eligendi error
-                repellat impedit eum quod enim sequi, distinctio, qui eaque ipsam fugit asperiores eos laboriosam ex.
-            </p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa id debitis ex eligendi rem unde
-                consequuntur
-                natus omnis vel nulla sit commodi, quos distinctio doloremque doloribus veniam quis et dolore?</p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi laboriosam nulla est architecto eum,
-                dolorem
-                quam, unde quo fugit tempore ipsa qui provident, iste ratione quis dignissimos temporibus nostrum
-                voluptatum
-                molestias? Blanditiis repellendus sapiente inventore aliquam qui error aliquid doloremque fugit
-                consequuntur
-                laudantium. Sapiente doloribus ullam vel dicta doloremque iure, deleniti ipsum non. Rem repudiandae
-                deleniti
-                ad
-                at laborum eaque, modi voluptas aut! Quam nihil deleniti velit excepturi, quidem, veniam aut doloremque
-                iure
-                reprehenderit natus vel quia iusto? Magni veritatis provident libero hic quisquam, perferendis officia
-                quasi
-                molestiae sit sunt fugiat, perspiciatis architecto velit unde molestias ratione totam, atque doloremque!
-            </p>
-            <hr>
-        </div>
-        <button class="accept" disabled>Accept</button>
-    </div>
+
 
 
 
